Fixed Report icon size issue and block member message popup alignment issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1127,7 +1127,7 @@ span.dashicons.dashicons-admin-file:before {
 
 						&:before {
 							content: "\e8ea";
-							font-size: 14px;
+							font-size: 15px;
 							vertical-align: middle;
 						}
 
